# ets2-sdk-plugin

./: .gitignore  README.md  changelog.md
scs-client/C#/SCSSdkClient/: Extension.cs  JobMarket.cs  Offence.cs  SCSGame.cs  SCSSdk.sln  SCSSdkClient.csproj  SCSSdkConvert.cs  SCSSdkTelemetry.cs  SharedMemory.cs
scs-client/C#/SCSSdkClient.Demo/SCSSdkClient.Demo/: Program.cs  SCSSdkClient.Demo.csproj  SCSSdkClientDemo.Designer.cs  SCSSdkClientDemo.cs
scs-client/C#/SCSSdkClient.Demo/SCSSdkClient.Demo/Properties/: AssemblyInfo.cs
scs-client/C#/SCSSdkClient/Object/: SCSTelemetry.Common.cs  SCSTelemetry.Control.cs  SCSTelemetry.DPlacement.cs  SCSTelemetry.DVector.cs  SCSTelemetry.Euler.cs  SCSTelemetry.FPlacement.cs  SCSTelemetry.FVector.cs  SCSTelemetry.Frequency.cs  SCSTelemetry.GamePlayEvents.cs  SCSTelemetry.Job.cs  SCSTelemetry.Methods.cs  SCSTelemetry.Movement.cs  SCSTelemetry.Navigation.cs  SCSTelemetry.SpecialEvents.cs  SCSTelemetry.Substance.cs  SCSTelemetry.Time.cs  SCSTelemetry.Trailer.cs  SCSTelemetry.Truck.Constants.cs  SCSTelemetry.Truck.Current.cs  SCSTelemetry.Truck.Position.cs  SCSTelemetry.Truck.cs  SCSTelemetry.Version.cs  SCSTelemetry.Wheels.cs  SCSTelemetry.cs  WheelsData.cs
scs-telemetry/: CMakeLists.txt  CMakeSettings.json
scs-telemetry/inc/: publisher.hpp  scs-telemetry-common.hpp  scs_config_handlers.hpp  scs_gameplay_event_handlers.hpp  sharedmemory.hpp  tcp_server.hpp
scs-telemetry/src/: publisher.cpp  scs_config_handlers.cpp  scs_gameplay_event_handlers.cpp  scs_telemetry.cpp  sharedmemory.cpp  tcp_server.cpp
